@@ -334,10 +334,10 @@ static const canon_cap_t canon_model_capabilities[] =
     "S300", 3,
     842, 17*72,
     11, 9, 10, 18,
-    &canon_default_slotlist,
-    CANON_CAP_STD1 | CANON_CAP_r,0x61,control_cmd_ackshort,
-    &canon_BJC_8500_modelist,
-    &canon_default_paperlist,
+    &canon_MULTIPASS_MP170_slotlist,
+    CANON_CAP_STD0|CANON_CAP_I|CANON_CAP_px,0,control_cmd_ackshort,
+    &canon_BJC_S300_modelist,
+    &canon_BJC_S300_paperlist,
     NULL,
     NULL,
     NULL,
